Bug 1318576.  Remove entries from a form's past names map when an element is removed from the form, even if that element doesn't have a name or id anymore.  r=baku